# mpmsub

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PROJECT_SUMMARY.md  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/workflows/: code-quality.yml  docs.yml  publish.yml  release.yml  tests.yml
benchmarks/: README.md  bioinformatics_benchmark.py  performance_comparison.py  run_all_benchmarks.py  simple_benchmark.py
docs/: index.md
docs/api/: overview.md
docs/guide/: advanced.md  jobs.md
examples/: api_demo.py  basic_example.py  benchmark_demo.py  job_object_demo.py  memory_example.py  pipeline_demo.py  profiling_example.py  test_defaults.py  test_profiling.py  test_progress_bar.py
mpmsub/: __init__.py  cluster.py  utils.py
tests/: test_basic.py
